--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -11,6 +11,7 @@
 .navbar-brand {
     padding: 0;
     font-size: 1.4rem;
+    font-weight: 700;
 }
 
 .container-fluid {
@@ -45,10 +46,12 @@
     border-bottom: none;
 }
 
-
-
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1000px) {
     .nav-item {
         border-bottom: none;
+    }
+
+    #navbar {
+        padding: 1rem 4rem;
     }
 }
