--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -3,9 +3,8 @@
 }
 
 .home__hero-link {
-    color: #fff;
+    color: var(--var-white);
     font-size: 1.5rem;
-    font-weight: 700;
     width: 12rem;
 }
 
@@ -72,7 +71,6 @@
     margin-top: 1rem;
     width: 16rem;
     font-size: 1.3rem;
-    font-weight: 700;
 }
 
 @media screen and (min-width: 1000px) {
@@ -133,6 +131,7 @@
     font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 1rem;
+    color: var(--var-primary)
 }
 
 .pricing-card__list {
@@ -141,7 +140,7 @@
 }
 
 .pricing-card__list-icon {
-    color: var(--var-secondary);
+    color: var(--var-primary);
     margin-right: .5rem;
     font-size: 1rem;
 }
