--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -200,3 +200,72 @@ a {
 .icon-primary {
   color: var(--var-primary);
 }
+
+/* Forms */
+
+.form-container {
+  min-height: 100vh;
+  margin: 6rem 0 4rem 0;
+}
+
+.form {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 2rem;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.form__header {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.form__btn-google {
+  width: 100%;
+  height: 3rem;
+  margin: 1rem 0;
+  font-size: 1.1rem;
+  text-align: center;
+  background-color: var(--var-light);
+  color: var(--var-text);
+  border: none;
+  border-radius: 5px;
+}
+
+.form__btn-google:hover {
+  opacity: 0.9;
+  transform: scale(1.02);
+  background: var(--var-light);
+  color: var(--var-text);
+}
+
+.form__input {
+  width: 100%;
+  height: 3rem;
+  margin-bottom: 1rem;
+  border: 1px solid var(--var-primary);
+  border-radius: 5px;
+  padding: 0 1rem;
+  font-size: 1rem;
+}
+
+.form__btn {
+  width: 100%;
+  height: 3rem;
+  margin-bottom: 1rem;
+  font-size: 1.1rem;
+  text-align: center;
+}
+
+@media screen and (min-width: 1000px) {
+  .form__header {
+    font-size: 2rem;
+  }
+}
