--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -27,9 +27,17 @@ body {
 
 /* Containers */
 
+.App {
+  width: 100%;
+}
+
 #root,
 .web-container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .page {
@@ -205,12 +213,11 @@ a {
 
 .form-container {
   min-height: 100vh;
-  margin: 6rem 0 4rem 0;
+  margin: 0;
+  width: 100%;
 }
 
 .form {
-  width: 100%;
-  max-width: 500px;
   margin: 0 auto;
   padding: 2rem;
   border-radius: 5px;
@@ -219,6 +226,9 @@ a {
   justify-content: center;
   align-items: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin: 8rem 0 6rem 0;
+  width: 100%;
+  max-width: 30rem;
 }
 
 .form__header {
