--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -1,3 +1,46 @@
 .profile {
     min-height: 100vh;
 }
+
+.profile__card {
+    background: var(--var-light);
+    padding: 4rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 9px;
+    margin: 2rem 0;
+    margin: 8rem 0 6rem 0;
+}
+
+.profile__card-header {
+    font-weight: 700;
+    width: 100%;
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+.logout__btn {
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.logout__btn:nth-of-type(1) {
+    margin-top: .5rem;
+}
+
+.profile__card-text {
+    width: 100%;
+    text-align: left;
+    font-size: 1.2rem;
+    margin-top: .1rem;
+}
+
+.profile__card-text:nth-of-type(1) {
+    margin-top: 1rem;
+}
+
+@media screen and (min-width: 1000px) {
+    .profile__card {}
+}
