--- a/src/components/css/AddCredits.css
+++ b/src/components/css/AddCredits.css
@@ -1,3 +1,12 @@
-.add-credits {
-    min-height: 100vh;
+.add-credits__header {
+    font-weight: 700;
+    width: 100%;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+@media screen and (min-width: 1000px) {
+    .add-credits__header {
+        font-size: 1.8rem;
+    }
 }
