--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -1,7 +1,3 @@
-.home {
-    padding-top: 10rem;
-}
-
 .home__hero-link {
     color: var(--var-white);
     font-size: 1.5rem;
@@ -113,18 +109,15 @@
     transition: all 0.3s ease-in-out;
 }
 
-.pricing-card:hover {
+.pricing-card:hover:not(.pricing-card--add) {
     scale: 1.03;
+    cursor: pointer;
 }
 
 .pricing-card__header {
     text-align: left;
     width: 100%;
     font-size: 1.5rem;
-}
-
-.pricing-card:hover {
-    cursor: pointer;
 }
 
 .pricing-card__price {
@@ -149,6 +142,15 @@
     font-size: 1rem;
     margin-bottom: 0.5rem;
 }
+
+.pricing-card__add-btn {
+    width: 100%;
+}
+
+.pricing-card__add-btn:hover {
+    color: var(--var-white);
+}
+
 
 @media screen and (min-width: 1000px) {
     .pricing__header {
