--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -10,8 +10,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 9px;
-    margin: 2rem 0;
-    margin: 8rem 0 6rem 0;
+    min-width: 350px;
 }
 
 .profile__card-header {
