--- a/src/components/css/AddCredits.css
+++ b/src/components/css/AddCredits.css
@@ -5,8 +5,20 @@
     font-size: 1.5rem;
 }
 
+.add-credits__p {
+    text-align: left;
+    margin: 0;
+    font-size: 1rem;
+    width: 325px;
+    text-align: center;
+}
+
 @media screen and (min-width: 1000px) {
     .add-credits__header {
         font-size: 1.8rem;
+    }
+
+    .add-credits__p {
+        width: 100%;
     }
 }
