--- a/src/components/css/IconGenerator.css
+++ b/src/components/css/IconGenerator.css
@@ -81,6 +81,12 @@
     font-size: .95rem;
 }
 
+.icon-generator__icon-display__icon-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 @media screen and (min-width: 768px) {
     .icon-generator__container__form {
         display: flex;
@@ -117,5 +123,25 @@
 
     .icon-generator__rules-header {
         font-size: 1.5rem;
+    }
+}
+
+/* Icon Generator Step 2 */
+.icon-generator__icon-display {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.icon-generator__icon-display__icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+@media screen and (min-width: 1000px) {
+    .icon-generator__icon-display {
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
