--- a/src/components/css/IconGenerator.css
+++ b/src/components/css/IconGenerator.css
@@ -131,6 +131,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
 }
 
 .icon-generator__icon-display__icon {
@@ -138,6 +139,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100%;
+    border-radius: 9px;
+    padding: 1rem;
+}
+
+.icon-generator__icon-display__icon-img {
+    max-width: 15rem;
 }
 
 @media screen and (min-width: 1000px) {
