--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -30,6 +30,7 @@ body {
 
 .App {
   width: 100%;
+  min-height: 100vh;
 }
 
 #root,
@@ -37,17 +38,15 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 .page {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   align-items: center;
-  justify-content: flex-start;
   width: 100%;
+  height: 100%;
 }
 
 .page-padding {
@@ -108,6 +107,10 @@ body {
   .grid-3 {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
+
+  .page-padding {
+    padding: 0 4rem;
+  }
 }
 
 /* Buttons */
@@ -122,6 +125,9 @@ body {
   padding: 0.5rem 1rem;
   transition: all 0.3s ease-in-out;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn:hover {
@@ -132,6 +138,10 @@ body {
 
 .btn-primary {
   font-weight: 500;
+}
+
+.loading-spinner {
+  width: 1.5rem;
 }
 
 /* Typography */
