Store generated icons in users firebase storage.

--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -4,6 +4,7 @@
     align-items: center;
     width: 100%;
     margin-bottom: 10rem;
+    background: var(--var-light) !important;
 }
 
 .nav-link {
