--- a/src/components/css/Icon.css
+++ b/src/components/css/Icon.css
@@ -1,3 +1,9 @@
-.icon {}
+.icon {
+    width: 100%;
+}
 
-.icon__img {}
+.icon__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
