--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -168,7 +168,7 @@ body {
 }
 
 .header-2 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   font-weight: 700;
   margin-bottom: 1rem;
 }
@@ -183,6 +183,10 @@ body {
 @media screen and (min-width: 1000px) {
   .p {
     font-size: 1.3rem;
+  }
+
+  .header-2 {
+    font-size: 1.8rem;
   }
 }
 
@@ -203,12 +207,15 @@ a {
 /* Images */
 .img {
   border-radius: 9px;
-  width: 90%;
+  width: 100%;
   max-width: 400px;
+  object-fit: cover;
 }
 
 .img-wrapper {
   display: flex;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   align-items: center;
 }
