--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
     background: var(--var-light) !important;
 }
 
@@ -65,6 +65,10 @@
 @media screen and (min-width: 1000px) {
     .nav-item {
         border-bottom: none;
+    }
+
+    .header {
+        margin-bottom: 10rem;
     }
 
     #navbar {
