--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -247,7 +247,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100% !important;
     text-align: left;
 }
 
