--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -47,6 +47,7 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
 }
 
 .page-padding {
@@ -97,7 +98,7 @@ body {
   }
 
   .grid-item {
-    padding: 2rem;
+    padding: 1rem;
   }
 
   .grid-reverse {
