--- a/src/components/css/AddCredits.css
+++ b/src/components/css/AddCredits.css
@@ -3,8 +3,7 @@
     width: 100%;
     text-align: left;
     font-size: 1.5rem;
-    margin-bottom: 0;
-    margin: 1rem 0 0 0;
+    margin: 1rem 0;
 }
 
 .add-credits__p {
