--- a/src/components/css/IconGenerator.css
+++ b/src/components/css/IconGenerator.css
@@ -87,6 +87,14 @@
     object-fit: fill;
 }
 
+.icon-generator__samples {}
+
+.icon-generator__samples-header {
+    margin: 2rem 0 0 0;
+    font-size: 1.6rem;
+
+}
+
 @media screen and (min-width: 768px) {
     .icon-generator__container__form {
         display: flex;
@@ -131,7 +139,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
-    padding: 2rem 0;
+    padding: 1rem 0 2rem 0;
 }
 
 .icon-generator__icon-display__icon {
