--- a/src/components/css/MyIcons.css
+++ b/src/components/css/MyIcons.css
@@ -22,6 +22,7 @@
 .my-icons__icon {
     width: 100%;
     border-radius: 9px;
+    overflow: hidden;
 }
 
 .my-icons__item:hover {
@@ -54,6 +55,34 @@
 .my-icons__operations-btn {
     width: 100%;
     margin-top: .5rem;
+}
+
+.my-icons__icon--shade {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.my-icons__icon--shade:hover {
+    cursor: pointer;
+}
+
+.my-icons__icon-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: brightness(40%);
+}
+
+.my-icons__icon-trash {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #fff;
+    font-size: 2rem;
+    transform: translate(-50%, -50%);
 }
 
 @media screen and (min-width: 1000px) {
