--- a/src/components/css/MyIcons.css
+++ b/src/components/css/MyIcons.css
@@ -85,6 +85,12 @@
     transform: translate(-50%, -50%);
 }
 
+.my-icons__no-icons {
+    font-size: 1.6rem;
+    text-align: center;
+    margin-top: 3rem;
+}
+
 @media screen and (min-width: 1000px) {
     .my-icons__container {
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
