Implement step-2 of generator (UI only); Partially implement step-3 crop functionality.

--- a/src/components/css/MyIcons.css
+++ b/src/components/css/MyIcons.css
@@ -23,9 +23,11 @@
     width: 100%;
     border-radius: 9px;
     overflow: hidden;
+    transition: all 0.3s ease-in-out;
 }
 
-.my-icons__item:hover {
+.my-icons__icon:hover {
+    transform: scale(1.02);
     cursor: pointer;
 }
 
