--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -10,7 +10,8 @@
     align-items: center;
     justify-content: center;
     border-radius: 9px;
-    min-width: 350px;
+    width: 100%;
+    max-width: 50rem;
 }
 
 .profile__card-header {
@@ -34,5 +35,34 @@
 
 .profile__card-group {
     width: 100%;
-    margin: 1rem 0 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile__card-group__first-child {
+    margin-right: 0;
+    width: 100%;
+}
+
+.profile__card-group__last-child {
+    margin-left: 0;
+    width: 100%;
+}
+
+@media screen and (min-width: 1000px) {
+    .profile__card-group {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .profile__card-group__first-child {
+        margin-right: .5rem;
+    }
+
+    .profile__card-group__last-child {
+        margin-left: .5rem;
+    }
 }
