--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -231,8 +231,14 @@ a {
   display: flex;
   width: 100%;
   height: 100%;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+}
+
+@media screen and (min-width: 1000px) {
+  .img-wrapper {
+    justify-content: center;
+  }
 }
 
 /* Lists */
