--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -4,6 +4,23 @@
     width: 12rem;
 }
 
+.icon-process__gif {
+    width: 100%;
+    transform: scale(1);
+}
+
+@media screen and (min-width: 1000px) {
+    .icon-process__gif {
+        transform: scale(1.2);
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .icon-process__gif {
+        transform: scale(1.3);
+    }
+}
+
 /* Features */
 .features {
     margin-top: 4rem;
