--- a/src/components/css/IconGenerator.css
+++ b/src/components/css/IconGenerator.css
@@ -33,6 +33,7 @@
     margin: .5rem 0 0 0;
     width: 100%;
     font-weight: 600;
+    color: var(--color-text);
 }
 
 .icon-generator__container__form-btn {
