Revamped icon images and css styles.

--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -7,6 +7,10 @@
     background: var(--var-light) !important;
 }
 
+.bg-body-tertiary {
+    background-color: var(--var-background) !important;
+}
+
 .nav-link {
     transition: all .3s;
 }
