Add 5 credits to new accounts created via email & password.

--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -9,8 +9,7 @@
 .footer-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: left;
+    align-items: flex-start;
     padding: 0;
 }
 
