--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -339,6 +339,12 @@ a {
   margin: 0 0 .6rem 0;
 }
 
+.form__body {
+  width: 100%;
+  margin-bottom: 1rem;
+  text-align: left;
+}
+
 .form__input-group__double-wide {
   display: flex;
   flex-direction: column;
@@ -350,6 +356,16 @@ a {
 .text-area {
   padding-top: .6rem;
   height: 6rem !important;
+}
+
+.form__body-center {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.email-verif-form__header {
+  color: var(--var-primary);
+  font-weight: 600;
 }
 
 @media screen and (min-width: 1000px) {
