--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -53,6 +53,10 @@
     margin-top: 1rem;
 }
 
+.profile__btn:disabled {
+    background: var(--var-primary);
+}
+
 @media screen and (min-width: 1000px) {
     .profile__card-group {
         flex-direction: row;
