Replace icon images; Fix prompt; Increase icon generation amount to 6.

--- a/src/components/css/IconGenerator.css
+++ b/src/components/css/IconGenerator.css
@@ -35,6 +35,7 @@
     width: 100%;
     font-weight: 600;
     color: var(--color-text);
+    background: var(--var-background);
 }
 
 .icon-generator__container__form-btn {
